// plugins {
//     id 'java'
//     id 'org.springframework.boot' version '3.3.4'
//     id 'io.spring.dependency-management' version '1.1.6'
// }

// group = 'com.example'
// version = '0.0.1-SNAPSHOT'

// java {
//     toolchain {
//         languageVersion = JavaLanguageVersion.of(17)
//     }
// }

// configurations {
//     compileOnly {
//         extendsFrom annotationProcessor
//     }
// }

// repositories {
//     mavenCentral()
// }


// dependencies {
//     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

//     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3' // 선택한 Feign Client 버전으로 수정

//     //jwt 토큰 관련
//     compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
//     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
//     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

//     //Redis
//     implementation 'org.springframework.boot:spring-boot-starter-data-redis'

//     //시큐리티 관련
//     implementation 'org.springframework.boot:spring-boot-starter-security'
// //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
//     testImplementation 'org.springframework.security:spring-security-test'
//     compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'

// //    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

// //    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
//     implementation 'io.github.openfeign:feign-core:11.10'

//     //swagger
//     implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
//     implementation 'org.springframework.boot:spring-boot-starter-validation'


//     // implementation 'org.springframework.boot:spring-boot-starter-security'
// //    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//     implementation 'org.springframework.boot:spring-boot-starter-web'
//     implementation 'org.springframework.boot:spring-boot-starter-web-services'
// //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
//     compileOnly 'org.projectlombok:lombok'
//     runtimeOnly 'com.h2database:h2'
//     runtimeOnly 'org.postgresql:postgresql'
//     annotationProcessor 'org.projectlombok:lombok'
//     testImplementation 'org.springframework.boot:spring-boot-starter-test'
//     // testImplementation 'org.springframework.security:spring-security-test'
//     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
// }

// tasks.named('test') {
//     useJUnitPlatform()
// }

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

bootJar {
    enabled = true
    archiveFileName = 'Jak-Sim.jar'  // jar 파일명 지정
}

jar {
    enabled = false  // plain jar 생성 비활성화
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'

    // JWT 토큰 관련
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 시큐리티 관련
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    compileOnly 'org.projectlombok:lombok'
    // runtimeOnly 'com.h2database:h2'
    // runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Jakarta Servlet
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'

    implementation 'mysql:mysql-connector-java:8.0.33' 

    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.529')
    implementation 'com.amazonaws:aws-java-sdk-s3'
}

tasks.named('test') {
    useJUnitPlatform()
}
